--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,37 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 14vh;
+  width: auto;
+  padding-left: 3vw;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.camera-logo{
+  height: 8vh;
+  width: auto;
+  padding-top: 2vw;
+  padding-right: 2vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.posts{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+.App-header {
+  background-color: white;
+  min-height: 15vh;
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  justify-content: space-between; 
   font-size: calc(10px + 2vmin);
   color: white;
+  border-bottom: 1px solid black;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 15px;
 }
 
 .App-link {
